CREATE TABLE IF NOT EXISTS `dgft_irm_activity_log` (
  `ID` varchar(20) NOT NULL,
  `EVENT` varchar(20) DEFAULT NULL,
  `IRM_ID` varchar(200) DEFAULT NULL,
  `FIELD_NAME` varchar(100) DEFAULT NULL,
  `OLD_VALUE` varchar(500) DEFAULT NULL,
  `NEW_VALUE` varchar(500) DEFAULT NULL,
  `EVENT_DESC` varchar(2000) DEFAULT NULL,
  `EVENT_USER` varchar(50) DEFAULT NULL,
  `EVENT_DATE` timestamp(6) NULL DEFAULT NULL,
  `PROCESS_TYPE` varchar(50) DEFAULT NULL,
  PRIMARY KEY (`ID`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_orm_master` (
  `ID` varchar(200) NOT NULL,
  `ORM_NUMBER` varchar(50) DEFAULT NULL,
  `ORM_AMOUNT` decimal(16,4) DEFAULT NULL,
  `ORM_DATE` date DEFAULT NULL,
  `AD_CODE_ID` varchar(200) DEFAULT NULL,
  `AD_CODE` varchar(7) DEFAULT NULL,
  `ORM_CURRENCY` varchar(3) DEFAULT NULL,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  `MODIFIED_BY` varchar(50) DEFAULT NULL,
  `MODIFIED_DATE` timestamp(6) NULL DEFAULT NULL,
  `IE_CODE` varchar(10) DEFAULT NULL,
  `IE_NAME` varchar(100) DEFAULT NULL,
  `IE_PAN` varchar(10) DEFAULT NULL,
  `BENEFICIARY_NAME` varchar(100) DEFAULT NULL,
  `BENEFICIARY_COUNTRY` varchar(3) DEFAULT NULL,
  `PURPOSE_CODE` varchar(20) DEFAULT NULL,
  `IFSC_CODE` varchar(11) DEFAULT NULL,
  `INR_PAYABLE_AMOUNT` decimal(16,2) DEFAULT NULL,
  `PAN_NUMBER` varchar(10) DEFAULT NULL,
  `STATUS` varchar(50) DEFAULT NULL,
  `REMARKS` varchar(200) DEFAULT NULL,
  `INBOUND_FILE_NAME` varchar(100) DEFAULT NULL,
  `FLAG` varchar(1) DEFAULT NULL,
  `DGFT_FLAG` varchar(1) DEFAULT NULL,
  `ERROR_CODES` varchar(200) DEFAULT NULL,
  `CHECKER_REMARKS` varchar(250) DEFAULT NULL,
  `BANK_UNIQUE_TRANSACTION_ID` varchar(25) DEFAULT NULL,
  `REFERENCE_IRM` varchar(50) DEFAULT NULL,
  `ORM_ISSUE_DATE` date DEFAULT NULL,
  `REMITTANCE_TYPE` varchar(1) DEFAULT NULL,
  `BANK_ACCOUNT_NUMBER` varchar(25) DEFAULT NULL,
  `DGFT_STATUS` varchar(250) DEFAULT NULL,
  `PROCESS_STATUS` varchar(20) DEFAULT NULL,
  `MASTER_DETAIL_STATUS` varchar(50) DEFAULT NULL,
  `ORM_CURRENCY_ID` varchar(200) DEFAULT NULL,
  `BENEFICIARY_COUNTRY_ID` varchar(200) DEFAULT NULL,
  `BILL_REFERENCE_NUMBER` varchar(50) DEFAULT NULL,
  PRIMARY KEY (`ID`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_orm_master_his` (
  `ID` varchar(200) NOT NULL,
  `TRIGGER_DATE` timestamp(6) NULL DEFAULT NULL,
  `ORM_ID` varchar(200) DEFAULT NULL,
  `ORM_NUMBER` varchar(50) DEFAULT NULL,
  `ORM_AMOUNT` decimal(16,4) DEFAULT NULL,
  `ORM_DATE` date DEFAULT NULL,
  `AD_CODE_ID` varchar(200) DEFAULT NULL,
  `AD_CODE` varchar(7) DEFAULT NULL,
  `ORM_CURRENCY` varchar(3) DEFAULT NULL,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  `MODIFIED_BY` varchar(50) DEFAULT NULL,
  `MODIFIED_DATE` timestamp(6) NULL DEFAULT NULL,
  `IE_CODE` varchar(10) DEFAULT NULL,
  `IE_NAME` varchar(100) DEFAULT NULL,
  `IE_PAN` varchar(10) DEFAULT NULL,
  `BENEFICIARY_NAME` varchar(100) DEFAULT NULL,
  `BENEFICIARY_COUNTRY` varchar(3) DEFAULT NULL,
  `PURPOSE_CODE` varchar(20) DEFAULT NULL,
  `IFSC_CODE` varchar(11) DEFAULT NULL,
  `INR_PAYABLE_AMOUNT` decimal(16,2) DEFAULT NULL,
  `PAN_NUMBER` varchar(10) DEFAULT NULL,
  `STATUS` varchar(50) DEFAULT NULL,
  `REMARKS` varchar(200) DEFAULT NULL,
  `INBOUND_FILE_NAME` varchar(100) DEFAULT NULL,
  `FLAG` varchar(1) DEFAULT NULL,
  `DGFT_FLAG` varchar(1) DEFAULT NULL,
  `ERROR_CODES` varchar(200) DEFAULT NULL,
  `CHECKER_REMARKS` varchar(250) DEFAULT NULL,
  `BANK_UNIQUE_TRANSACTION_ID` varchar(25) DEFAULT NULL,
  `REFERENCE_IRM` varchar(50) DEFAULT NULL,
  `ORM_ISSUE_DATE` date DEFAULT NULL,
  `REMITTANCE_TYPE` varchar(1) DEFAULT NULL,
  `BANK_ACCOUNT_NUMBER` varchar(25) DEFAULT NULL,
  `DGFT_STATUS` varchar(250) DEFAULT NULL,
  `PROCESS_STATUS` varchar(20) DEFAULT NULL,
  `MASTER_DETAIL_STATUS` varchar(50) DEFAULT NULL,
  `ORM_CURRENCY_ID` varchar(200) DEFAULT NULL,
  `BENEFICIARY_COUNTRY_ID` varchar(200) DEFAULT NULL,
  `BILL_REFERENCE_NUMBER` varchar(50) DEFAULT NULL,
  `TRIGGER_STATUS` varchar(20) DEFAULT NULL,
  PRIMARY KEY (`ID`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_orm_message_detail` (
  `ID` varchar(200) NOT NULL,
  `DGFT_ORM_MSG_MASTER_ID` varchar(200) DEFAULT NULL,
  `ORM_NUMBER` varchar(50) DEFAULT NULL,
  `ORM_ISSUE_DATE` date DEFAULT NULL,
  `STATUS` varchar(10) DEFAULT NULL,
  `DGFT_ACK_STATUS` varchar(25) DEFAULT NULL,
  `DGFT_ERROR_CODES` varchar(100) DEFAULT NULL,
  `DGFT_ERROR_DETAILS` varchar(300) DEFAULT NULL,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  `MODIFIED_BY` varchar(50) DEFAULT NULL,
  `MODIFIED_DATE` timestamp(6) NULL DEFAULT NULL,
  PRIMARY KEY (`ID`),
  KEY `FK_ORM_MSG_DETAIL_MASTER` (`DGFT_ORM_MSG_MASTER_ID`),
  KEY `IDX_ORM_MESSAGE_DETAIL_NUMBER` (`ORM_NUMBER`),
  KEY `IDX_ORM_MESSAGE_DETAIL_STATUS` (`STATUS`),
  KEY `IDX_ORM_MESSAGE_DETAIL_ACK` (`DGFT_ACK_STATUS`),
  CONSTRAINT `FK_ORM_MSG_DETAIL_MASTER` FOREIGN KEY (`DGFT_ORM_MSG_MASTER_ID`) REFERENCES `dgft_orm_message_master` (`ID`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_orm_message_master` (
  `ID` varchar(200) NOT NULL,
  `UNIQUE_TX_ID` varchar(25) DEFAULT NULL,
  `REQUEST_JSON_OBJ` longtext,
  `RESPONSE_JSON_OBJ` longtext,
  `DGFT_ACK_STATUS` varchar(25) DEFAULT NULL,
  `STATUS` varchar(50) DEFAULT NULL,
  `DGFT_MSG_PUSH_ERROR` varchar(50) DEFAULT NULL,
  `DGFT_LAST_TX_STATUS_JSON_OBJ` longtext,
  `DGFT_PUSH_INIT_TIME` timestamp(6) NULL DEFAULT NULL,
  `DGFT_LAST_TX_STATUS_INIT_TIME` timestamp(6) NULL DEFAULT NULL,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  `MODIFIED_BY` varchar(50) DEFAULT NULL,
  `MODIFIED_DATE` timestamp(6) NULL DEFAULT NULL,
  PRIMARY KEY (`ID`),
  KEY `IDX_ORM_MESSAGE_MASTER_TX` (`UNIQUE_TX_ID`),
  KEY `IDX_ORM_MESSAGE_MASTER_STATUS` (`STATUS`),
  KEY `IDX_ORM_MESSAGE_MASTER_ACK` (`DGFT_ACK_STATUS`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_orm_msg_tx_status_log` (
  `ID` varchar(200) NOT NULL,
  `DGFT_ORM_MSG_MASTER_ID` varchar(200) DEFAULT NULL,
  `DGFT_TX_STATUS_JSON_OBJ` longtext,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  PRIMARY KEY (`ID`),
  KEY `FK_ORM_TX_STATUS_MASTER` (`DGFT_ORM_MSG_MASTER_ID`),
  CONSTRAINT `FK_ORM_TX_STATUS_MASTER` FOREIGN KEY (`DGFT_ORM_MSG_MASTER_ID`) REFERENCES `dgft_orm_message_master` (`ID`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

CREATE TABLE IF NOT EXISTS `dgft_purpose_code_master` (
  `ID` varchar(200) NOT NULL,
  `CODE` varchar(20) DEFAULT NULL,
  `DESCRIPTION` varchar(200) DEFAULT NULL,
  `STATUS` varchar(20) DEFAULT NULL,
  `PURPOSE_GROUP` varchar(2) DEFAULT NULL,
  `GROUP_NAME` varchar(50) DEFAULT NULL,
  `ADDED_BY` varchar(50) DEFAULT NULL,
  `ADDED_DATE` timestamp(6) NULL DEFAULT NULL,
  `MODIFIED_BY` varchar(50) DEFAULT NULL,
  `MODIFIED_DATE` timestamp(6) NULL DEFAULT NULL,
  `APPLICATION_TYPE` varchar(4) DEFAULT NULL,
  `REMARKS` varchar(200) DEFAULT NULL,
  PRIMARY KEY (`ID`),
  KEY `DGFT_PURPOSE_MASTER_IDX2` (`CODE`),
  KEY `DGFT_PURPOSE_MASTER_IDX3` (`STATUS`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
